src/test/ui/variance/variance-trait-matching.stderr
error[E0621]: explicit lifetime required in the type of `get`
  --> $DIR/variance-trait-matching.rs:24:5
   |
LL | fn get<'a, G>(get: &G) -> i32
   |                    -- help: add explicit lifetime `'a` to the type of `get`: `&'a G`
...
LL |     pick(get, &22)
   |     ^^^^^^^^^^^^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
